--- a/trade_value.ipynb
+++ b/trade_value.ipynb
@@ -2,19 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import pandas as pd\n",
     "from bs4 import BeautifulSoup\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "\n",
+    "import pymongo\n",
+    "from constants import MONGO_NAME, MONGO_PW, MONGO_DB\n",
+    "import pandas as pd\n",
+    "from nba_api.stats.static import players\n",
+    "from helpers import (\n",
+    "    flatten_performance_df,\n",
+    "    get_average_player_performances,\n",
+    ")\n",
+    "import numpy as np\n",
+    "from sklearn.metrics import r2_score, mean_squared_error\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import xgboost as xgb\n",
+    "from tqdm import tqdm\n",
+    "from nba_api.stats.endpoints import leaguegamefinder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,32 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pymongo\n",
-    "import random\n",
-    "from constants import MONGO_NAME, MONGO_PW, MONGO_DB\n",
-    "import pandas as pd\n",
-    "from nba_api.stats.static import players\n",
-    "from helpers import (\n",
-    "    flatten_performance_df,\n",
-    "    get_average_player_performances,\n",
-    "    stack_df,\n",
-    ")\n",
-    "import numpy as np\n",
-    "from sklearn.metrics import r2_score, mean_squared_error\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import xgboost as xgb\n",
-    "from tqdm import tqdm\n",
-    "import random\n",
-    "from nba_api.stats.endpoints import leaguegamefinder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,386 +118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PLAYER_ID</th>\n",
-       "      <th>PLAYER_NAME</th>\n",
-       "      <th>PCT_FGA_2PT</th>\n",
-       "      <th>PCT_AST_2PM</th>\n",
-       "      <th>PCT_PTS_2PT</th>\n",
-       "      <th>AST_PCT</th>\n",
-       "      <th>PCT_FG3M</th>\n",
-       "      <th>PCT_BLKA</th>\n",
-       "      <th>PCT_BLK</th>\n",
-       "      <th>FG3_PCT</th>\n",
-       "      <th>...</th>\n",
-       "      <th>E_PACE</th>\n",
-       "      <th>AST_RATIO</th>\n",
-       "      <th>DIST</th>\n",
-       "      <th>AST_TOV</th>\n",
-       "      <th>FTA_RATE</th>\n",
-       "      <th>OPP_FTA_RATE</th>\n",
-       "      <th>MIN</th>\n",
-       "      <th>PACE_PER40</th>\n",
-       "      <th>PACE</th>\n",
-       "      <th>PIE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2544</td>\n",
-       "      <td>LeBron James</td>\n",
-       "      <td>0.617882</td>\n",
-       "      <td>0.383412</td>\n",
-       "      <td>0.561971</td>\n",
-       "      <td>0.276529</td>\n",
-       "      <td>0.276176</td>\n",
-       "      <td>0.240765</td>\n",
-       "      <td>0.213147</td>\n",
-       "      <td>0.338559</td>\n",
-       "      <td>...</td>\n",
-       "      <td>100.097059</td>\n",
-       "      <td>18.102941</td>\n",
-       "      <td>2.319706</td>\n",
-       "      <td>2.098235</td>\n",
-       "      <td>0.236147</td>\n",
-       "      <td>0.246618</td>\n",
-       "      <td>35.953824</td>\n",
-       "      <td>82.446765</td>\n",
-       "      <td>98.935000</td>\n",
-       "      <td>0.170088</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2546</td>\n",
-       "      <td>Carmelo Anthony</td>\n",
-       "      <td>0.431359</td>\n",
-       "      <td>0.394949</td>\n",
-       "      <td>0.369282</td>\n",
-       "      <td>0.060103</td>\n",
-       "      <td>0.321282</td>\n",
-       "      <td>0.115359</td>\n",
-       "      <td>0.267282</td>\n",
-       "      <td>0.368564</td>\n",
-       "      <td>...</td>\n",
-       "      <td>102.584103</td>\n",
-       "      <td>7.825641</td>\n",
-       "      <td>1.719231</td>\n",
-       "      <td>0.705128</td>\n",
-       "      <td>0.279000</td>\n",
-       "      <td>0.283410</td>\n",
-       "      <td>25.266410</td>\n",
-       "      <td>85.352821</td>\n",
-       "      <td>102.424103</td>\n",
-       "      <td>0.092821</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2617</td>\n",
-       "      <td>Udonis Haslem</td>\n",
-       "      <td>0.143711</td>\n",
-       "      <td>0.077778</td>\n",
-       "      <td>0.123800</td>\n",
-       "      <td>0.013133</td>\n",
-       "      <td>0.011111</td>\n",
-       "      <td>0.022222</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.022222</td>\n",
-       "      <td>...</td>\n",
-       "      <td>16.994889</td>\n",
-       "      <td>0.873333</td>\n",
-       "      <td>0.084667</td>\n",
-       "      <td>0.044444</td>\n",
-       "      <td>0.019222</td>\n",
-       "      <td>0.080822</td>\n",
-       "      <td>1.180889</td>\n",
-       "      <td>15.101333</td>\n",
-       "      <td>18.121111</td>\n",
-       "      <td>0.013756</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2730</td>\n",
-       "      <td>Dwight Howard</td>\n",
-       "      <td>0.691381</td>\n",
-       "      <td>0.519119</td>\n",
-       "      <td>0.456857</td>\n",
-       "      <td>0.041024</td>\n",
-       "      <td>0.053167</td>\n",
-       "      <td>0.155952</td>\n",
-       "      <td>0.265857</td>\n",
-       "      <td>0.119048</td>\n",
-       "      <td>...</td>\n",
-       "      <td>78.225476</td>\n",
-       "      <td>5.528571</td>\n",
-       "      <td>0.919048</td>\n",
-       "      <td>0.186429</td>\n",
-       "      <td>0.195048</td>\n",
-       "      <td>0.213619</td>\n",
-       "      <td>12.983333</td>\n",
-       "      <td>64.345000</td>\n",
-       "      <td>77.213571</td>\n",
-       "      <td>0.082500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2738</td>\n",
-       "      <td>Andre Iguodala</td>\n",
-       "      <td>0.373000</td>\n",
-       "      <td>0.371227</td>\n",
-       "      <td>0.276500</td>\n",
-       "      <td>0.211636</td>\n",
-       "      <td>0.140364</td>\n",
-       "      <td>0.029227</td>\n",
-       "      <td>0.295409</td>\n",
-       "      <td>0.222682</td>\n",
-       "      <td>...</td>\n",
-       "      <td>87.195909</td>\n",
-       "      <td>36.836364</td>\n",
-       "      <td>1.165000</td>\n",
-       "      <td>1.461818</td>\n",
-       "      <td>0.201500</td>\n",
-       "      <td>0.218455</td>\n",
-       "      <td>17.141818</td>\n",
-       "      <td>72.089091</td>\n",
-       "      <td>86.505000</td>\n",
-       "      <td>0.099000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>537</th>\n",
-       "      <td>1630691</td>\n",
-       "      <td>Jamorko Pickett</td>\n",
-       "      <td>0.066833</td>\n",
-       "      <td>0.111111</td>\n",
-       "      <td>0.091667</td>\n",
-       "      <td>0.009278</td>\n",
-       "      <td>0.148111</td>\n",
-       "      <td>0.027778</td>\n",
-       "      <td>0.037056</td>\n",
-       "      <td>0.131500</td>\n",
-       "      <td>...</td>\n",
-       "      <td>43.054444</td>\n",
-       "      <td>2.083333</td>\n",
-       "      <td>0.300556</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.159222</td>\n",
-       "      <td>0.148056</td>\n",
-       "      <td>3.873333</td>\n",
-       "      <td>37.120000</td>\n",
-       "      <td>44.544444</td>\n",
-       "      <td>0.050167</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>538</th>\n",
-       "      <td>1630692</td>\n",
-       "      <td>Jordan Goodwin</td>\n",
-       "      <td>0.250000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>21.850000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.060000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.041750</td>\n",
-       "      <td>0.630000</td>\n",
-       "      <td>15.697500</td>\n",
-       "      <td>18.837500</td>\n",
-       "      <td>-0.043500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>539</th>\n",
-       "      <td>1630693</td>\n",
-       "      <td>Jaime Echenique</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>540</th>\n",
-       "      <td>1630695</td>\n",
-       "      <td>Micah Potter</td>\n",
-       "      <td>0.250000</td>\n",
-       "      <td>0.166750</td>\n",
-       "      <td>0.187500</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>59.565000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.372500</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.114250</td>\n",
-       "      <td>0.062500</td>\n",
-       "      <td>4.377500</td>\n",
-       "      <td>46.822500</td>\n",
-       "      <td>56.187500</td>\n",
-       "      <td>0.054250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>541</th>\n",
-       "      <td>1630698</td>\n",
-       "      <td>Kevin Pangos</td>\n",
-       "      <td>0.109375</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.008937</td>\n",
-       "      <td>0.096562</td>\n",
-       "      <td>0.013500</td>\n",
-       "      <td>0.031250</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.020813</td>\n",
-       "      <td>...</td>\n",
-       "      <td>39.377187</td>\n",
-       "      <td>10.728125</td>\n",
-       "      <td>0.173438</td>\n",
-       "      <td>0.281250</td>\n",
-       "      <td>0.151344</td>\n",
-       "      <td>0.236125</td>\n",
-       "      <td>2.107187</td>\n",
-       "      <td>36.025625</td>\n",
-       "      <td>43.230625</td>\n",
-       "      <td>0.025063</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>542 rows × 107 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     PLAYER_ID      PLAYER_NAME  PCT_FGA_2PT  PCT_AST_2PM  PCT_PTS_2PT  \\\n",
-       "0         2544     LeBron James     0.617882     0.383412     0.561971   \n",
-       "1         2546  Carmelo Anthony     0.431359     0.394949     0.369282   \n",
-       "2         2617    Udonis Haslem     0.143711     0.077778     0.123800   \n",
-       "3         2730    Dwight Howard     0.691381     0.519119     0.456857   \n",
-       "4         2738   Andre Iguodala     0.373000     0.371227     0.276500   \n",
-       "..         ...              ...          ...          ...          ...   \n",
-       "537    1630691  Jamorko Pickett     0.066833     0.111111     0.091667   \n",
-       "538    1630692   Jordan Goodwin     0.250000     0.000000     0.000000   \n",
-       "539    1630693  Jaime Echenique     0.000000     0.000000     0.000000   \n",
-       "540    1630695     Micah Potter     0.250000     0.166750     0.187500   \n",
-       "541    1630698     Kevin Pangos     0.109375     0.000000     0.008937   \n",
-       "\n",
-       "      AST_PCT  PCT_FG3M  PCT_BLKA   PCT_BLK   FG3_PCT  ...      E_PACE  \\\n",
-       "0    0.276529  0.276176  0.240765  0.213147  0.338559  ...  100.097059   \n",
-       "1    0.060103  0.321282  0.115359  0.267282  0.368564  ...  102.584103   \n",
-       "2    0.013133  0.011111  0.022222  0.000000  0.022222  ...   16.994889   \n",
-       "3    0.041024  0.053167  0.155952  0.265857  0.119048  ...   78.225476   \n",
-       "4    0.211636  0.140364  0.029227  0.295409  0.222682  ...   87.195909   \n",
-       "..        ...       ...       ...       ...       ...  ...         ...   \n",
-       "537  0.009278  0.148111  0.027778  0.037056  0.131500  ...   43.054444   \n",
-       "538  0.000000  0.000000  0.000000  0.000000  0.000000  ...   21.850000   \n",
-       "539  0.000000  0.000000  0.000000  0.000000  0.000000  ...    0.000000   \n",
-       "540  0.000000  0.000000  0.000000  0.000000  0.000000  ...   59.565000   \n",
-       "541  0.096562  0.013500  0.031250  0.000000  0.020813  ...   39.377187   \n",
-       "\n",
-       "     AST_RATIO      DIST   AST_TOV  FTA_RATE  OPP_FTA_RATE        MIN  \\\n",
-       "0    18.102941  2.319706  2.098235  0.236147      0.246618  35.953824   \n",
-       "1     7.825641  1.719231  0.705128  0.279000      0.283410  25.266410   \n",
-       "2     0.873333  0.084667  0.044444  0.019222      0.080822   1.180889   \n",
-       "3     5.528571  0.919048  0.186429  0.195048      0.213619  12.983333   \n",
-       "4    36.836364  1.165000  1.461818  0.201500      0.218455  17.141818   \n",
-       "..         ...       ...       ...       ...           ...        ...   \n",
-       "537   2.083333  0.300556  0.000000  0.159222      0.148056   3.873333   \n",
-       "538   0.000000  0.060000  0.000000  0.000000      0.041750   0.630000   \n",
-       "539   0.000000  0.000000  0.000000  0.000000      0.000000   0.000000   \n",
-       "540   0.000000  0.372500  0.000000  0.114250      0.062500   4.377500   \n",
-       "541  10.728125  0.173438  0.281250  0.151344      0.236125   2.107187   \n",
-       "\n",
-       "     PACE_PER40        PACE       PIE  \n",
-       "0     82.446765   98.935000  0.170088  \n",
-       "1     85.352821  102.424103  0.092821  \n",
-       "2     15.101333   18.121111  0.013756  \n",
-       "3     64.345000   77.213571  0.082500  \n",
-       "4     72.089091   86.505000  0.099000  \n",
-       "..          ...         ...       ...  \n",
-       "537   37.120000   44.544444  0.050167  \n",
-       "538   15.697500   18.837500 -0.043500  \n",
-       "539    0.000000    0.000000  0.000000  \n",
-       "540   46.822500   56.187500  0.054250  \n",
-       "541   36.025625   43.230625  0.025063  \n",
-       "\n",
-       "[542 rows x 107 columns]"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "average_performances"
+    "def get_score_df(average_performances):\n",
+    "    \"\"\"Unique Score\"\"\"\n",
+    "    score_df = average_performances.iloc[:,:2].copy()\n",
+    "    score_df['SCORE'] = average_performances.iloc[:,2:].T.sum()**2\n",
+    "    score_df['SCORE'] = score_df['SCORE']/score_df['SCORE'].max()\n",
+    "    return score_df"
    ]
   },
   {
@@ -533,15 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = 'TRADE_VALUE'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "target = 'TRADE_VALUE'\n",
     "df = average_performances.merge(trade_value_df.drop('TEAM_ABBREVIATION',axis=1),how='inner',on='PLAYER_NAME')"
    ]
   },
