--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,102 @@
     "team_performance_df = pd.DataFrame(list(team_performances)).set_index('_id')\n",
     "player_performance_df = flatten_performance_df(player_performance_df)\n",
     "team_performance_df = flatten_performance_df(team_performance_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GAME_ID</th>\n",
+       "      <th>GAME_DATE</th>\n",
+       "      <th>TEAM_ID</th>\n",
+       "      <th>TEAM_ABBREVIATION</th>\n",
+       "      <th>TEAM_CITY</th>\n",
+       "      <th>PLAYER_ID</th>\n",
+       "      <th>PLAYER_NAME</th>\n",
+       "      <th>NICKNAME</th>\n",
+       "      <th>START_POSITION</th>\n",
+       "      <th>PCT_FGA_2PT</th>\n",
+       "      <th>...</th>\n",
+       "      <th>E_PACE</th>\n",
+       "      <th>AST_RATIO</th>\n",
+       "      <th>DIST</th>\n",
+       "      <th>AST_TOV</th>\n",
+       "      <th>FTA_RATE</th>\n",
+       "      <th>OPP_FTA_RATE</th>\n",
+       "      <th>MIN</th>\n",
+       "      <th>PACE_PER40</th>\n",
+       "      <th>PACE</th>\n",
+       "      <th>PIE</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 114 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [GAME_ID, GAME_DATE, TEAM_ID, TEAM_ABBREVIATION, TEAM_CITY, PLAYER_ID, PLAYER_NAME, NICKNAME, START_POSITION, PCT_FGA_2PT, PCT_AST_2PM, PCT_PTS_2PT, AST_PCT, PCT_FG3M, PCT_BLKA, PCT_BLK, FG3_PCT, PCT_PTS, PCT_FGM, PCT_REB, PCT_FGA, E_USG_PCT, REB_PCT, PCT_PTS_OFF_TOV, PCT_DREB, OPP_OREB_PCT, PCT_UAST_3PM, PCT_TOV, DREB_PCT, PCT_FTM, OPP_TOV_PCT, PCT_UAST_2PM, PCT_AST_3PM, USG_PCT, PCT_AST, FG_PCT, EFG_PCT, TS_PCT, PCT_OREB, PCT_PTS_2PT_MR, PCT_PF, FT_PCT, PCT_PTS_PAINT, PCT_PTS_FT, PCT_PFD, PCT_FGA_3PT, OPP_EFG_PCT, CFG_PCT, TM_TOV_PCT, PCT_UAST_FGM, PCT_PTS_3PT, OREB_PCT, PCT_PTS_FB, PCT_AST_FGM, UFG_PCT, PCT_FG3A, PCT_STL, DFG_PCT, OREB, AST, REB, DFGA, SAST, OPP_PTS_2ND_CHANCE, PFD, TO, FG3A, STL, POSS, PASS, UFGM, FG3M, PTS, UFGA, DRBC, OPP_PTS_PAINT, FTM, ORBC, BLKA, PTS_FB, CFGA, PTS_PAINT, TCHS, CFGM, PLUS_MINUS, DFGM, OPP_PTS_OFF_TOV, PTS_OFF_TOV, FGA, FTA, PTS_2ND_CHANCE, FGM, PF, DREB, BLK, RBC, OPP_PTS_FB, FTAST, E_OFF_RATING, OFF_RATING, ...]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 114 columns]"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "player_performance_df[player_performance_df.duplicated()]"
    ]
   },
   {
@@ -58,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,42 +165,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
-    "player_count = 13\n",
+    "player_count = 1\n",
     "target = 'PLUS_MINUS'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9430/9430 [15:42<00:00, 10.01it/s]\n"
+      "100%|██████████| 9730/9730 [16:23<00:00,  9.90it/s] \n"
      ]
     }
    ],
@@ -131,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,113 +233,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/main/lib/python3.9/site-packages/xgboost/data.py:208: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\tvalidation_0-rmse:13.25047\n",
-      "[1]\tvalidation_0-rmse:12.22901\n",
-      "[2]\tvalidation_0-rmse:11.29746\n",
-      "[3]\tvalidation_0-rmse:10.45619\n",
-      "[4]\tvalidation_0-rmse:9.70260\n",
-      "[5]\tvalidation_0-rmse:9.02189\n",
-      "[6]\tvalidation_0-rmse:8.40453\n",
-      "[7]\tvalidation_0-rmse:7.84599\n",
-      "[8]\tvalidation_0-rmse:7.32675\n",
-      "[9]\tvalidation_0-rmse:6.87006\n",
-      "[10]\tvalidation_0-rmse:6.44762\n",
-      "[11]\tvalidation_0-rmse:6.06652\n",
-      "[12]\tvalidation_0-rmse:5.73259\n",
-      "[13]\tvalidation_0-rmse:5.42844\n",
-      "[14]\tvalidation_0-rmse:5.15223\n",
-      "[15]\tvalidation_0-rmse:4.89794\n",
-      "[16]\tvalidation_0-rmse:4.66094\n",
-      "[17]\tvalidation_0-rmse:4.44882\n",
-      "[18]\tvalidation_0-rmse:4.25943\n",
-      "[19]\tvalidation_0-rmse:4.09190\n",
-      "[20]\tvalidation_0-rmse:3.93814\n",
-      "[21]\tvalidation_0-rmse:3.79951\n",
-      "[22]\tvalidation_0-rmse:3.67762\n",
-      "[23]\tvalidation_0-rmse:3.56618\n",
-      "[24]\tvalidation_0-rmse:3.45839\n",
-      "[25]\tvalidation_0-rmse:3.36936\n",
-      "[26]\tvalidation_0-rmse:3.28316\n",
-      "[27]\tvalidation_0-rmse:3.20568\n",
-      "[28]\tvalidation_0-rmse:3.13289\n",
-      "[29]\tvalidation_0-rmse:3.07327\n",
-      "[30]\tvalidation_0-rmse:3.01617\n",
-      "[31]\tvalidation_0-rmse:2.96519\n",
-      "[32]\tvalidation_0-rmse:2.92075\n",
-      "[33]\tvalidation_0-rmse:2.87276\n",
-      "[34]\tvalidation_0-rmse:2.83162\n",
-      "[35]\tvalidation_0-rmse:2.79574\n",
-      "[36]\tvalidation_0-rmse:2.76077\n",
-      "[37]\tvalidation_0-rmse:2.73204\n",
-      "[38]\tvalidation_0-rmse:2.69956\n",
-      "[39]\tvalidation_0-rmse:2.67180\n",
-      "[40]\tvalidation_0-rmse:2.64480\n",
-      "[41]\tvalidation_0-rmse:2.62441\n",
-      "[42]\tvalidation_0-rmse:2.60288\n",
-      "[43]\tvalidation_0-rmse:2.58187\n",
-      "[44]\tvalidation_0-rmse:2.56379\n",
-      "[45]\tvalidation_0-rmse:2.54763\n",
-      "[46]\tvalidation_0-rmse:2.53144\n",
-      "[47]\tvalidation_0-rmse:2.51411\n",
-      "[48]\tvalidation_0-rmse:2.49978\n",
-      "[49]\tvalidation_0-rmse:2.48731\n",
-      "[50]\tvalidation_0-rmse:2.47260\n",
-      "[51]\tvalidation_0-rmse:2.45991\n",
-      "[52]\tvalidation_0-rmse:2.44603\n",
-      "[53]\tvalidation_0-rmse:2.43562\n",
-      "[54]\tvalidation_0-rmse:2.42407\n",
-      "[55]\tvalidation_0-rmse:2.41221\n",
-      "[56]\tvalidation_0-rmse:2.40410\n",
-      "[57]\tvalidation_0-rmse:2.39404\n",
-      "[58]\tvalidation_0-rmse:2.38568\n",
-      "[59]\tvalidation_0-rmse:2.37663\n",
-      "[60]\tvalidation_0-rmse:2.36908\n",
-      "[61]\tvalidation_0-rmse:2.35949\n",
-      "[62]\tvalidation_0-rmse:2.35221\n",
-      "[63]\tvalidation_0-rmse:2.34493\n",
-      "[64]\tvalidation_0-rmse:2.33577\n",
-      "[65]\tvalidation_0-rmse:2.32743\n",
-      "[66]\tvalidation_0-rmse:2.32161\n",
-      "[67]\tvalidation_0-rmse:2.31417\n",
-      "[68]\tvalidation_0-rmse:2.30589\n",
-      "[69]\tvalidation_0-rmse:2.29876\n",
-      "[70]\tvalidation_0-rmse:2.29067\n",
-      "[71]\tvalidation_0-rmse:2.28670\n",
-      "[72]\tvalidation_0-rmse:2.27837\n",
-      "[73]\tvalidation_0-rmse:2.27032\n",
-      "[74]\tvalidation_0-rmse:2.26347\n",
-      "[75]\tvalidation_0-rmse:2.26011\n",
-      "[76]\tvalidation_0-rmse:2.25441\n",
-      "[77]\tvalidation_0-rmse:2.25013\n",
-      "[78]\tvalidation_0-rmse:2.24614\n",
-      "[79]\tvalidation_0-rmse:2.24054\n",
-      "[80]\tvalidation_0-rmse:2.23722\n",
-      "[81]\tvalidation_0-rmse:2.23397\n",
-      "[82]\tvalidation_0-rmse:2.23026\n",
-      "[83]\tvalidation_0-rmse:2.22605\n",
-      "[84]\tvalidation_0-rmse:2.22129\n",
-      "[85]\tvalidation_0-rmse:2.21752\n",
-      "[86]\tvalidation_0-rmse:2.21305\n",
-      "[87]\tvalidation_0-rmse:2.21041\n",
-      "[88]\tvalidation_0-rmse:2.20473\n",
-      "[89]\tvalidation_0-rmse:2.20227\n",
-      "[90]\tvalidation_0-rmse:2.20029\n",
-      "[91]\tvalidation_0-rmse:2.19746\n",
-      "[92]\tvalidation_0-rmse:2.19378\n",
-      "[93]\tvalidation_0-rmse:2.18997\n",
-      "[94]\tvalidation_0-rmse:2.18635\n",
-      "[95]\tvalidation_0-rmse:2.18417\n",
-      "[96]\tvalidation_0-rmse:2.18234\n",
-      "[97]\tvalidation_0-rmse:2.17893\n",
-      "[98]\tvalidation_0-rmse:2.17619\n",
-      "[99]\tvalidation_0-rmse:2.17360\n"
+      "[0]\tvalidation_0-rmse:13.07783\n",
+      "[1]\tvalidation_0-rmse:12.03534\n",
+      "[2]\tvalidation_0-rmse:11.09732\n",
+      "[3]\tvalidation_0-rmse:10.26041\n",
+      "[4]\tvalidation_0-rmse:9.50001\n",
+      "[5]\tvalidation_0-rmse:8.81520\n",
+      "[6]\tvalidation_0-rmse:8.19530\n",
+      "[7]\tvalidation_0-rmse:7.62308\n",
+      "[8]\tvalidation_0-rmse:7.11199\n",
+      "[9]\tvalidation_0-rmse:6.65362\n",
+      "[10]\tvalidation_0-rmse:6.25245\n",
+      "[11]\tvalidation_0-rmse:5.88057\n",
+      "[12]\tvalidation_0-rmse:5.54256\n",
+      "[13]\tvalidation_0-rmse:5.24407\n",
+      "[14]\tvalidation_0-rmse:4.96145\n",
+      "[15]\tvalidation_0-rmse:4.71796\n",
+      "[16]\tvalidation_0-rmse:4.48233\n",
+      "[17]\tvalidation_0-rmse:4.27746\n",
+      "[18]\tvalidation_0-rmse:4.08889\n",
+      "[19]\tvalidation_0-rmse:3.92149\n",
+      "[20]\tvalidation_0-rmse:3.76013\n",
+      "[21]\tvalidation_0-rmse:3.62550\n",
+      "[22]\tvalidation_0-rmse:3.50493\n",
+      "[23]\tvalidation_0-rmse:3.38982\n",
+      "[24]\tvalidation_0-rmse:3.28553\n",
+      "[25]\tvalidation_0-rmse:3.19463\n",
+      "[26]\tvalidation_0-rmse:3.11090\n",
+      "[27]\tvalidation_0-rmse:3.03816\n",
+      "[28]\tvalidation_0-rmse:2.96549\n",
+      "[29]\tvalidation_0-rmse:2.90079\n",
+      "[30]\tvalidation_0-rmse:2.84856\n",
+      "[31]\tvalidation_0-rmse:2.79966\n",
+      "[32]\tvalidation_0-rmse:2.74749\n",
+      "[33]\tvalidation_0-rmse:2.70363\n",
+      "[34]\tvalidation_0-rmse:2.66601\n",
+      "[35]\tvalidation_0-rmse:2.62948\n",
+      "[36]\tvalidation_0-rmse:2.59439\n",
+      "[37]\tvalidation_0-rmse:2.56495\n",
+      "[38]\tvalidation_0-rmse:2.53303\n",
+      "[39]\tvalidation_0-rmse:2.50799\n",
+      "[40]\tvalidation_0-rmse:2.48164\n",
+      "[41]\tvalidation_0-rmse:2.45989\n",
+      "[42]\tvalidation_0-rmse:2.43809\n",
+      "[43]\tvalidation_0-rmse:2.41726\n",
+      "[44]\tvalidation_0-rmse:2.40177\n",
+      "[45]\tvalidation_0-rmse:2.38572\n",
+      "[46]\tvalidation_0-rmse:2.37119\n",
+      "[47]\tvalidation_0-rmse:2.35504\n",
+      "[48]\tvalidation_0-rmse:2.34057\n",
+      "[49]\tvalidation_0-rmse:2.32852\n",
+      "[50]\tvalidation_0-rmse:2.31191\n",
+      "[51]\tvalidation_0-rmse:2.29683\n",
+      "[52]\tvalidation_0-rmse:2.28591\n",
+      "[53]\tvalidation_0-rmse:2.27499\n",
+      "[54]\tvalidation_0-rmse:2.26324\n",
+      "[55]\tvalidation_0-rmse:2.25209\n",
+      "[56]\tvalidation_0-rmse:2.23953\n",
+      "[57]\tvalidation_0-rmse:2.22749\n",
+      "[58]\tvalidation_0-rmse:2.21708\n",
+      "[59]\tvalidation_0-rmse:2.20788\n",
+      "[60]\tvalidation_0-rmse:2.19996\n",
+      "[61]\tvalidation_0-rmse:2.19309\n",
+      "[62]\tvalidation_0-rmse:2.18564\n",
+      "[63]\tvalidation_0-rmse:2.17914\n",
+      "[64]\tvalidation_0-rmse:2.17177\n",
+      "[65]\tvalidation_0-rmse:2.16346\n",
+      "[66]\tvalidation_0-rmse:2.15577\n",
+      "[67]\tvalidation_0-rmse:2.14825\n",
+      "[68]\tvalidation_0-rmse:2.14341\n",
+      "[69]\tvalidation_0-rmse:2.13736\n",
+      "[70]\tvalidation_0-rmse:2.13104\n",
+      "[71]\tvalidation_0-rmse:2.12419\n",
+      "[72]\tvalidation_0-rmse:2.11897\n",
+      "[73]\tvalidation_0-rmse:2.11284\n",
+      "[74]\tvalidation_0-rmse:2.10846\n",
+      "[75]\tvalidation_0-rmse:2.10284\n",
+      "[76]\tvalidation_0-rmse:2.09921\n",
+      "[77]\tvalidation_0-rmse:2.09350\n",
+      "[78]\tvalidation_0-rmse:2.08820\n",
+      "[79]\tvalidation_0-rmse:2.08392\n",
+      "[80]\tvalidation_0-rmse:2.07840\n",
+      "[81]\tvalidation_0-rmse:2.07409\n",
+      "[82]\tvalidation_0-rmse:2.06987\n",
+      "[83]\tvalidation_0-rmse:2.06737\n",
+      "[84]\tvalidation_0-rmse:2.06379\n",
+      "[85]\tvalidation_0-rmse:2.05988\n",
+      "[86]\tvalidation_0-rmse:2.05536\n",
+      "[87]\tvalidation_0-rmse:2.05303\n",
+      "[88]\tvalidation_0-rmse:2.05048\n",
+      "[89]\tvalidation_0-rmse:2.04697\n",
+      "[90]\tvalidation_0-rmse:2.04259\n",
+      "[91]\tvalidation_0-rmse:2.03844\n",
+      "[92]\tvalidation_0-rmse:2.03664\n",
+      "[93]\tvalidation_0-rmse:2.03325\n",
+      "[94]\tvalidation_0-rmse:2.03067\n",
+      "[95]\tvalidation_0-rmse:2.02767\n",
+      "[96]\tvalidation_0-rmse:2.02557\n",
+      "[97]\tvalidation_0-rmse:2.02320\n",
+      "[98]\tvalidation_0-rmse:2.02021\n",
+      "[99]\tvalidation_0-rmse:2.01763\n"
      ]
     }
    ],
@@ -291,15 +377,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9778764250849853\n",
-      "0.9848886532343585\n"
+      "0.9781207799392005\n",
+      "0.9843227961963505\n"
      ]
     }
    ],
@@ -345,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
