Now clean up everything

--- a/article.ipynb
+++ b/article.ipynb
@@ -635,49 +635,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 33%|███▎      | 1/3 [00:00<00:00,  2.84it/s]"
+      " 33%|███▎      | 1/3 [00:00<00:01,  1.30it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Winner Team:  ['Darius Garland', 'Miles Bridges', 'Gary Trent Jr.', 'Kyle Lowry', 'Luke Kennard', 'P.J. Washington', 'Ty Jerome', 'Isaiah Roby', 'Aaron Nesmith', 'Ignas Brazdeikis', 'Anthony Gill', 'Moses Wright', 'Miye Oni']\n"
+      "Winner Team:  ['Kevin Durant', 'Mikal Bridges', 'Tyrese Maxey', \"D'Angelo Russell\", 'Spencer Dinwiddie', 'Steven Adams', 'Jalen Smith', 'Frank Kaminsky', 'Keifer Sykes', 'Reggie Perry', 'Enes Freedom', 'Kent Bazemore', 'Chris Chiozza']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 67%|██████▋   | 2/3 [00:00<00:00,  2.73it/s]"
+      " 67%|██████▋   | 2/3 [00:01<00:00,  1.43it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Winner Team:  ['Chris Paul', 'Keldon Johnson', 'Mike Conley', 'Jusuf Nurkic', 'Deandre Ayton', 'Ziaire Williams', 'Tre Jones', 'Mychal Mulder', 'Dwight Howard', 'Svi Mykhailiuk', 'Daishen Nix', 'DeAndre Jordan', 'Gorgui Dieng']\n"
+      "Winner Team:  ['Kevin Durant', 'Mikal Bridges', 'Tyrese Maxey', \"D'Angelo Russell\", 'Spencer Dinwiddie', 'Steven Adams', 'Jalen Smith', 'Frank Kaminsky', 'Keifer Sykes', 'Reggie Perry', 'Enes Freedom', 'Kent Bazemore', 'Chris Chiozza']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:01<00:00,  2.87it/s]"
+      "100%|██████████| 3/3 [00:02<00:00,  1.44it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Winner Team:  ['Chris Paul', 'Keldon Johnson', 'Mike Conley', 'Jusuf Nurkic', 'Deandre Ayton', 'Ziaire Williams', 'Tre Jones', 'Mychal Mulder', 'Dwight Howard', 'Svi Mykhailiuk', 'Daishen Nix', 'DeAndre Jordan', 'Gorgui Dieng']\n"
+      "Winner Team:  ['Kevin Durant', 'Mikal Bridges', 'Tyrese Maxey', \"D'Angelo Russell\", 'Spencer Dinwiddie', 'Steven Adams', 'Jalen Smith', 'Frank Kaminsky', 'Keifer Sykes', 'Reggie Perry', 'Enes Freedom', 'Kent Bazemore', 'Chris Chiozza']\n"
      ]
     },
     {
@@ -689,7 +689,7 @@
     }
    ],
    "source": [
-    "winner_list = run_tournament(average_data, model=model_13,rounds=3,team_count=16,team_size=13)"
+    "winner_list = run_tournament(average_data, model=model_13,rounds=3,team_count=32,team_size=13)"
    ]
   },
   {
@@ -760,21 +760,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:01<00:00, 66.40it/s]"
+      "100%|██████████| 100/100 [00:03<00:00, 29.83it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Win/Loss Ratio: 1.0\n"
+      "Win/Loss Ratio: 0.99\n"
      ]
     },
     {
@@ -1128,6 +1128,13 @@
    ],
    "source": [
     "nba_trade_finder('CHA', trade_value_df,average_data,model=model_13,team_size=13,samples=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the above trade, we can learn that while Jaylen Brown may be better than LaMelo Ball, LaMelo possibly has a much higher potential as he's still a very young player. This is something our trade finder can't measure as of now. One possible way of measuring potential would be to predict future player performance by looking at trends in past player performance."
    ]
   },
   {
