pretty clean, issue with duplicate players

--- a/article.ipynb
+++ b/article.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/main/lib/python3.9/site-packages/xgboost/compat.py:31: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import xgboost as xgb\n",
@@ -58,12 +67,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_13 = xgb.XGBRegressor()\n",
-    "model_13.load_model('models/13_player_model_small.json')\n",
+    "model_13.load_model('models/13_player_model.json')\n",
     "model_10 = xgb.XGBRegressor()\n",
     "model_10.load_model('models/10_player_model.json')\n",
     "model_5 = xgb.XGBRegressor()\n",
@@ -74,17 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE (13 players): 2.173604\n",
+      "RMSE (13 players): 2.017629\n",
       "RMSE (10 players): 3.06293\n",
       "RMSE (5 plyaers): 4.549689\n",
-      "RMSE (1 player): 6.275678\n"
+      "RMSE (1 player): 6.055228\n"
      ]
     }
    ],
@@ -118,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +500,7 @@
        "[542 rows x 108 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +508,7 @@
    "source": [
     "data = pd.read_csv('data/22021_data.csv').set_index('_id').drop('GAME_ID',axis=1)\n",
     "average_data = get_average_player_performances(data)\n",
-    "average_data"
+    "average_data.drop_duplicates(\"PLAYER_NAME\", keep='first')"
    ]
   },
   {
@@ -513,15 +522,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plus Minus (BOS): 4.734989166259766\n",
-      "Plus Minus (PHX): -0.42579782009124756\n"
+      "Plus Minus (BOS): 2.0201895236968994\n",
+      "Plus Minus (PHX): 0.5233829021453857\n"
      ]
     }
    ],
@@ -542,17 +551,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Players (A): ['Caris LeVert', 'Langston Galloway', 'Tristan Thompson', 'Jordan Clarkson', 'Bruno Fernando', 'Taj Gibson', 'Dennis Schroder', 'Bam Adebayo', 'Wenyen Gabriel', 'Sam Merrill', 'Max Strus', 'Richaun Holmes', 'Jalen Smith']\n",
-      "Players (B): ['OG Anunoby', 'Moses Brown', 'Mike Muscala', 'Rajon Rondo', 'Kevin Porter Jr.', 'Deni Avdija', 'DeMar DeRozan', 'Moritz Wagner', 'Jake Layman', 'Andre Drummond', 'R.J. Hampton', 'Jusuf Nurkic', 'Chaundee Brown Jr.']\n",
-      "Plus Minus (A): -1.53811514377594\n",
-      "Plus Minus (B): 1.096522569656372\n"
+      "Players (A): ['Rodney Hood', 'Immanuel Quickley', 'Mychal Mulder', 'Kevin Love', 'Wendell Carter Jr.', 'Wenyen Gabriel', 'George King', 'Darius Bazley', 'Moses Moody', 'Ryan Arcidiacono', 'Shaquille Harrison', 'Luke Kennard', 'Derrick Jones Jr.']\n",
+      "Players (B): ['Aleksej Pokusevski', 'Kelan Martin', 'Norman Powell', 'Micah Potter', 'Langston Galloway', 'Buddy Hield', 'Terence Davis', 'Rodney McGruder', 'Ish Wainright', 'Kyrie Irving', 'Serge Ibaka', 'Hassan Whiteside', 'LaMelo Ball']\n",
+      "Plus Minus (A): 0.44363778829574585\n",
+      "Plus Minus (B): 0.08266866207122803\n"
      ]
     }
    ],
@@ -581,21 +590,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [00:17<00:00,  1.70it/s]"
+      "100%|██████████| 30/30 [00:15<00:00,  1.97it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'BOS': 1.0, 'UTA': 0.9655172413793104, 'PHX': 0.9310344827586207, 'GSW': 0.8620689655172413, 'CLE': 0.8620689655172413, 'MEM': 0.8275862068965517, 'MIA': 0.7586206896551724, 'BKN': 0.7586206896551724, 'ATL': 0.7241379310344828, 'MIL': 0.7241379310344828, 'SAS': 0.6896551724137931, 'MIN': 0.6206896551724138, 'DAL': 0.5862068965517241, 'PHI': 0.5517241379310345, 'DEN': 0.5172413793103449, 'CHA': 0.4827586206896552, 'TOR': 0.4482758620689655, 'CHI': 0.41379310344827586, 'NOP': 0.3448275862068966, 'LAC': 0.3103448275862069, 'POR': 0.3103448275862069, 'WAS': 0.3103448275862069, 'NYK': 0.27586206896551724, 'IND': 0.20689655172413793, 'HOU': 0.1724137931034483, 'SAC': 0.13793103448275862, 'OKC': 0.10344827586206896, 'LAL': 0.06896551724137931, 'ORL': 0.034482758620689655, 'DET': 0.0}\n"
+      "{'BOS': 1.0, 'UTA': 0.9655172413793104, 'PHX': 0.9310344827586207, 'MEM': 0.896551724137931, 'MIA': 0.8275862068965517, 'SAS': 0.8275862068965517, 'MIL': 0.7931034482758621, 'GSW': 0.7586206896551724, 'BKN': 0.7241379310344828, 'CLE': 0.7241379310344828, 'ATL': 0.6551724137931034, 'DAL': 0.6206896551724138, 'DEN': 0.5862068965517241, 'MIN': 0.5517241379310345, 'CHA': 0.5172413793103449, 'PHI': 0.4827586206896552, 'TOR': 0.4482758620689655, 'POR': 0.41379310344827586, 'CHI': 0.3793103448275862, 'LAC': 0.3103448275862069, 'NOP': 0.3103448275862069, 'WAS': 0.3103448275862069, 'NYK': 0.2413793103448276, 'IND': 0.20689655172413793, 'HOU': 0.1724137931034483, 'LAL': 0.13793103448275862, 'SAC': 0.10344827586206896, 'OKC': 0.06896551724137931, 'ORL': 0.034482758620689655, 'DET': 0.0}\n"
      ]
     },
     {
@@ -635,49 +644,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 33%|███▎      | 1/3 [00:00<00:01,  1.30it/s]"
+      " 33%|███▎      | 1/3 [00:00<00:01,  1.83it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Winner Team:  ['Kevin Durant', 'Mikal Bridges', 'Tyrese Maxey', \"D'Angelo Russell\", 'Spencer Dinwiddie', 'Steven Adams', 'Jalen Smith', 'Frank Kaminsky', 'Keifer Sykes', 'Reggie Perry', 'Enes Freedom', 'Kent Bazemore', 'Chris Chiozza']\n"
+      "Winner Team:  ['Jayson Tatum', 'James Harden', 'Bam Adebayo', \"D'Angelo Russell\", 'Christian Wood', 'Robert Williams III', 'Ayo Dosunmu', 'Jae Crowder', 'T.J. McConnell', 'Willie Cauley-Stein', 'David Duke Jr.', 'Justin Champagnie', 'DeJon Jarreau']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 67%|██████▋   | 2/3 [00:01<00:00,  1.43it/s]"
+      " 67%|██████▋   | 2/3 [00:01<00:00,  1.94it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Winner Team:  ['Kevin Durant', 'Mikal Bridges', 'Tyrese Maxey', \"D'Angelo Russell\", 'Spencer Dinwiddie', 'Steven Adams', 'Jalen Smith', 'Frank Kaminsky', 'Keifer Sykes', 'Reggie Perry', 'Enes Freedom', 'Kent Bazemore', 'Chris Chiozza']\n"
+      "Winner Team:  ['Jayson Tatum', 'James Harden', 'Bam Adebayo', \"D'Angelo Russell\", 'Christian Wood', 'Robert Williams III', 'Ayo Dosunmu', 'Jae Crowder', 'T.J. McConnell', 'Willie Cauley-Stein', 'David Duke Jr.', 'Justin Champagnie', 'DeJon Jarreau']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:02<00:00,  1.44it/s]"
+      "100%|██████████| 3/3 [00:01<00:00,  2.00it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Winner Team:  ['Kevin Durant', 'Mikal Bridges', 'Tyrese Maxey', \"D'Angelo Russell\", 'Spencer Dinwiddie', 'Steven Adams', 'Jalen Smith', 'Frank Kaminsky', 'Keifer Sykes', 'Reggie Perry', 'Enes Freedom', 'Kent Bazemore', 'Chris Chiozza']\n"
+      "Winner Team:  ['Jayson Tatum', 'James Harden', 'Bam Adebayo', \"D'Angelo Russell\", 'Christian Wood', 'Robert Williams III', 'Ayo Dosunmu', 'Jae Crowder', 'T.J. McConnell', 'Willie Cauley-Stein', 'David Duke Jr.', 'Justin Champagnie', 'DeJon Jarreau']\n"
      ]
     },
     {
@@ -701,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1045,7 @@
        "9     201935           James Harden               PHI  0.878221"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1101,21 +1110,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:04<00:00,  2.31it/s]"
+      "100%|██████████| 10/10 [00:03<00:00,  2.58it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trade LaMelo Ball for Jaylen Brown to improve from 0.5 to 0.6 W/L\n"
+      "Trade Montrezl Harrell for Bojan Bogdanovic to improve from 0.5 to 0.767 W/L\n"
      ]
     },
     {
@@ -1128,13 +1137,6 @@
    ],
    "source": [
     "nba_trade_finder('CHA', trade_value_df,average_data,model=model_13,team_size=13,samples=10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "From the above trade, we can learn that while Jaylen Brown may be better than LaMelo Ball, LaMelo possibly has a much higher potential as he's still a very young player. This is something our trade finder can't measure as of now. One possible way of measuring potential would be to predict future player performance by looking at trends in past player performance."
    ]
   },
   {
@@ -1687,7 +1689,10 @@
    "source": [
     "**Limitations**\n",
     "\n",
-    "Our model relies heavily on the individual plus-minus scores of individual players. It may be a limitation of our model as it would favor players currently playing on winning teams while unfairly penalizing players playing on losing teams. Nevertheless, keeping the individual plus-minus scores of players as features makes sense as they provide valuable information about a player's performance."
+    "Our model relies heavily on the individual plus-minus scores of individual players. It may be a limitation of our model as it would favor players currently playing on winning teams while unfairly penalizing players playing on losing teams. Nevertheless, keeping the individual plus-minus scores of players as features makes sense as they provide valuable information about a player's performance.\n",
+    "\n",
+    "\n",
+    "A limitation of the trade finder is that it does not take into account the potential a player has. One possible way of measuring potential would be to predict future player performance by looking at trends in past player performance."
    ]
   },
   {
